<resources>
    <string name="app_name">COEN390_SafeHit</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account">No account?</string>
    <string name="create_an_account">Create an account</string>

    //Sign up fields
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="personType">Type</string>
    <string-array name="personType">
        <item>Select Type</item>
        <item>Player</item>
        <item>Coach</item>
        <!--        <item>Trainer</item>-->
    </string-array>
    <string name="teamname">Team Name</string>
    <string name="position">Position</string>
    <string name="number">Number</string>
    <string name="updateinfo">Update User Information</string>
    <string name="save">Save</string>
    <string name="default_notification_channel_id">101</string>
</resources>