<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingsActivity"
    android:background="@drawable/background_color">

    <Button
        android:id="@+id/backButton4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/infotext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="Update User Information"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infotext">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname_field"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ .-"
            android:hint="@string/firstname"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastname_field"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ .-"
            android:hint="@string/lastname"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/coach_layout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColorHint="@color/white"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teamname_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:hint="@string/teamname"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/player_layout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <Spinner
            android:id="@+id/teamnamePlayer_dropdown"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/spinner_layer_signup"
            android:dropDownWidth="300dp"
            android:popupBackground="#FFffffff"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/position_field_dropdown"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/spinner_layer_signup"
            android:dropDownWidth="300dp"
            android:popupBackground="#FFffffff"
            android:spinnerMode="dropdown" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/number"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="@+id/saveButton"
        app:layout_constraintTop_toTopOf="@+id/saveButton" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_curved"
        android:enabled="true"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>