<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.SignUp"
    android:padding="25dp"
    android:background="@drawable/background_color">

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="Fill up information"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignIn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname_field"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:hint="@string/firstname"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastname_field"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:hint="@string/lastname"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/type_dropdown"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner_layer_signup"
        android:dropDownWidth="300dp"
        android:popupBackground="#FFffffff"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <LinearLayout
        android:id="@+id/coach_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_layout_border"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_dropdown">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColorHint="@color/white"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teamname_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:hint="@string/teamname"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/player_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_layout_border"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/type_dropdown"
        tools:layout_editor_absoluteX="25dp">

        <Spinner
            android:id="@+id/teamnamePlayer_dropdown"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/spinner_layer_signup2"
            android:dropDownWidth="300dp"
            android:popupBackground="#FFffffff"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/position_field_dropdown"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner_layer_signup2"
            android:dropDownWidth="300dp"
            android:popupBackground="#FFffffff"
            android:spinnerMode="dropdown" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/number"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trainer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_layout_border"
        android:orientation="vertical"
        android:visibility="gone">

        <Spinner
            android:id="@+id/teamnameTrainer_dropdown"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="@+id/signUpButton"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/signUpButton"
        app:layout_constraintTop_toTopOf="@+id/signUpButton" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="sign up"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_layout" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowColor="@color/black"
        android:shadowDx=".2"
        android:shadowDy=".2"
        android:shadowRadius="1" />

</androidx.constraintlayout.widget.ConstraintLayout>